--- a/deployment_cfg.yaml
+++ b/deployment_cfg.yaml
@@ -2,6 +2,7 @@
 common:
   platform_dns_name: "papa.home"
   platform_ip: "192.168.1.96"
+  pool_storage: "/scratch"
 
 #network:
 #  name: jenkins_network
